--- a/joomla_users_importer/assets/css/style.css
+++ b/joomla_users_importer/assets/css/style.css
@@ -1,3 +1,12 @@
+/*! 
+ * ************************************************************************************ 
+ *  Joomla Users Importer | Import users from CSV file into Joomla 3 database 
+ *  Version 2.0.1 - Date: 28/02/2016 
+ *  HomePage: https://github.com/Gix075/joomla-users-importer#readme 
+ * ************************************************************************************ 
+*/ 
+
+
 body {
 	background: #333;
     color: #fff;
