--- a/dev/assets/css/style.css
+++ b/dev/assets/css/style.css
@@ -18,10 +18,13 @@ hr {
 
 .alert {
 	margin-bottom: 0;
+	font-weight: 700;
 }
 
 .alert h4 {
 	margin: 0;
+	font-size: 2em;
+	font-weight: 700;
 }
 
 footer {
@@ -36,7 +39,7 @@ label {
 }
 
 .form-title {
-	margin: 20px 0;
+	margin: 10px 0;
 	text-transform: uppercase;
 	color: #999;
 }
@@ -68,6 +71,10 @@ label {
     		box-shadow: none;
 }
 
+.modal {
+	color: #333;
+}
+
 .alert-info {
     color: #fff;
     background-color: #999;
@@ -77,6 +84,11 @@ label {
 .margin-top {
 	margin-top: 20px;
 }
+
+.margin-bottom {
+	margin-bottom: 20px;
+}
+
 
 .align-right {
 	text-align: right;
